--- a/lec-7/main.css
+++ b/lec-7/main.css
@@ -9,7 +9,7 @@ h1 {
     text-shadow: 2px 2px 2px red;
     font-family: "Sofia", sans-serif;
     font-style: italic;
-    font-weight: black;
+    font-weight: 800;
     font-size: 20px;
 }
 
