--- a/website/css/main.css
+++ b/website/css/main.css
@@ -46,6 +46,37 @@ body {
     border-radius: 10px;
 }
 
+.nav-mobile-menu {
+    display: none;
+    cursor: pointer;
+}
+
+/* Mobile Responsiveness */
+@media screen and (max-width: 768px) {
+    .navbar {
+        padding: 20px 15px;
+    }
+
+    .nav-right, .nav-links {
+        display: none;
+    }
+
+    .nav-mobile-menu {
+        display: block;
+    }
+}
+
+/* Tablet Responsiveness */
+@media (min-width: 768px) and (max-width: 1280px) {
+    .navbar {
+        padding: 24px 48px;
+    }
+
+    .nav-left {
+        gap: 40px;
+    }
+}
+
 /* Hero section */
 .hero {
     display: flex;
@@ -80,10 +111,68 @@ body {
     width: 50%;
 }
 
-.hero-img img {
+.hero-img .hero-img-primary {
     width: 100%;
-    width: 700px;
     float: right;
+}
+
+.hero-img .hero-img-mobile {
+    display: none;
+    width: 100%;
+    margin-top: 60px
+}
+
+/* Mobile Responsiveness */
+@media screen and (max-width: 768px) {
+    .hero {
+        flex-direction: column;
+    }
+
+    .hero-content {
+        width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .hero-content .hero-heading {
+        font-size: 40px;
+    }
+
+    .hero-app {
+        margin-top: 40px;
+    }
+
+    .hero-img {
+        width: 100%;
+    }
+
+    .hero-img .hero-img-primary {
+        display: none;
+    }
+
+    .hero-img .hero-img-mobile {
+        display: block;
+    }
+}
+
+/* Tablet Responsiveness */
+@media (min-width: 768px) and (max-width: 1280px) {
+    .hero-content {
+        width: 100%;
+        padding-left: 40px;
+    }
+
+    .hero-content .hero-heading {
+        font-size: 52px;
+    }
+
+    .hero-img .hero-img-primary {
+        display: none;
+    }
+
+    .hero-img .hero-img-mobile {
+        display: block;
+    }
 }
 
 /* Product section */
@@ -261,6 +350,91 @@ body {
     border-radius: 20px;
 }
 
+/* Mobile Responsiveness */
+@media screen and (max-width: 768px) {
+    .product {
+        padding: 72px 15px;
+        gap: 40px;
+    }
+
+    .product .row-container {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .product .row1-left .content {
+        width: 100%;
+    }
+
+    .product .row1-left {
+        width: auto;
+        height: 400px;
+    
+        background-position: 30px bottom;
+        background-size: 60%;
+        padding: 20px;
+    }
+
+    .product .row1-left .content {
+        width: 100%;
+    }
+
+    .product .row1-right {
+        width: auto;
+        padding: 30px 20px;
+    }
+
+    .product .row2-left {
+        width: auto;
+        padding: 30px 20px;
+    }
+
+    .product .row2-right {
+        width: auto;
+        height: 560px;
+    
+        background-position: bottom;
+        background-size: 92%;
+        padding: 20px;
+    }
+
+    .product .row2-right .content {
+        width: 100%;
+    }
+}
+
+/* Tablet Responsiveness */
+@media (min-width: 768px) and (max-width: 1280px) {
+    .product {
+        padding: 84px 40px;
+        gap: 52px;
+    }
+
+    .product .row1-left {
+        height: 400px;
+    
+        background-position: 30px bottom;
+        background-size: 60%;
+        padding: 40px;
+    }
+
+    .product .row1-left .content {
+        width: 100%;
+    }
+
+    .product .row2-right {
+        height: 480px;
+    
+        background-position: bottom;
+        background-size: 92%;
+        padding: 40px;
+    }
+
+    .product .row2-right .content {
+        width: 100%;
+    }
+}
+
 /* Client Section */
 .client {
     padding: 96px 120px;
@@ -298,6 +472,30 @@ body {
     justify-content: center;
     width: 70%;
     gap: 30px;
+}
+
+/* Mobile Responsiveness */
+@media screen and (max-width: 768px) {
+    .client {
+        padding: 72px 15px;
+    }
+
+    .client-container {
+        width: 100%;
+        gap: 40px;
+    }
+}
+
+/* Tablet Responsiveness */
+@media (min-width: 768px) and (max-width: 1280px) {
+    .client {
+        padding: 84px 40px;
+    }
+
+    .client-container {
+        width: 100%;
+        gap: 40px;
+    }
 }
 
 /* Testimonial section */
@@ -391,6 +589,42 @@ body {
     font-size: 20px;
 }
 
+/* Mobile Responsiveness */
+@media screen and (max-width: 768px) {
+    .testimonial {
+        padding: 72px 15px;
+        flex-direction: column;
+    }
+
+    .testimonial .testimonial-content {
+        width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .testimonial-content h1 {
+        font-size: 30px;
+    }
+
+    .testimonial-img-container {
+        width: 100%;
+        height: 100%;
+        padding-right: 15px;
+        margin: 60px 0;
+    }
+}
+
+/* Tablet Responsiveness */
+@media (min-width: 768px) and (max-width: 1280px) {
+    .testimonial {
+        padding: 84px 40px;
+    }
+
+    .testimonial-content h1 {
+        font-size: 40px;
+    }
+}
+
 /* Footer section */
 .footer {
     display: flex;
@@ -474,4 +708,47 @@ body {
 .footer-copyright .footer-social img {
     width: 20px;
     height: 20px;
+}
+
+/* Mobile Responsiveness */
+@media screen and (max-width: 768px) {
+    .footer {
+        justify-content: start;
+        padding: 72px 15px;
+    }
+
+    .footer-top {
+        flex-direction: column;
+        justify-content: start;
+        gap: 30px;
+    }
+    
+    .footer-left p {
+        margin-top: 20px;
+    }
+
+    .footer-center {
+        justify-content: space-around;
+        margin-left: -20px;
+    }
+
+    .footer-right .footer-app {
+        margin-top: -10px;
+        display: flex;
+        gap: 20px;
+    }
+}
+
+/* Tablet Responsiveness */
+@media (min-width: 768px) and (max-width: 1280px) {
+    .footer {
+        padding: 84px 40px;
+    }
+
+    .footer-right {
+        width: 100%;
+        display: flex;
+        align-items: end;
+        gap: 10px;
+    }
 }
